--- a/VacIT/VacIT.csproj
+++ b/VacIT/VacIT.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <Folder Include="Areas\Identity\Data\" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
